--- a/Frontend/src/Pages/Landing.css
+++ b/Frontend/src/Pages/Landing.css
@@ -12,9 +12,8 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-color: #333; /* Optional: Background color for better visibility */
+    /* background-color: #333; Optional: Background color for better visibility */
     /* color: white; Optional: Text color for better visibility */
-    color:white;
 
 }
 
