--- a/Frontend/src/Pages/Landing.css
+++ b/Frontend/src/Pages/Landing.css
@@ -58,6 +58,15 @@
     flex-direction: column;
 }
 
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    gap: 10px;
+    margin-top: 10px;
+}
+
 .add-item-button {
     align-self: flex-start;
     margin-top: 5px; 
