--- a/Frontend/src/Pages/Landing.css
+++ b/Frontend/src/Pages/Landing.css
@@ -14,8 +14,16 @@
     align-items: center;
     height: 100vh;
     width: 100%;
+}
 
-
+.header {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0px;
+    margin-bottom: 5px;
 }
 
 .toolbar {
@@ -70,7 +78,8 @@
 .add-item-button {
     align-self: flex-start;
     margin-top: 5px; 
-    margin-bottom: 60px;
+    margin-bottom: 40px;
+    height: 25px;
 }
 
 @media (max-width: 500px) {
